k8s/manifests-b30a02/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-b30a02
  namespace: journee
  labels:
    app: journee-b30a02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-b30a02
  template:
    metadata:
      labels:
        app: journee-b30a02
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-b30a02
          image: gcr.io/my-docker-471807/journee:v5.8.1
          ports:
            - containerPort: 3000
