k8s/manifests-b30a02/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-b30a02
  namespace: journee
spec:
  selector:
    app: journee-b30a02
  ports:
    - port: 80
      targetPort: 3000
